# apply.thelandbank.org

./: .gitignore  CLAUDE.md  Featured homes(Sheet1).csv  GCLBA-Development-Report.docx  Procfile  README.md  Ready 4 Rehab(Sheet1).csv  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
applications/: admin.py  admin_utils.py  apps.py  csv_import.py  forms.py  models.py  routing.py  status_notifications.py  tests.py  urls.py  views.py
applications/forms/: __init__.py  featured_homes.py  ready_for_rehab.py  shared.py  vip_spotlight.py
applications/migrations/: 0001_initial.py  0002_add_indexes.py  0002_four_program_refactor.py  0003_applicationdraft_submitted_and_more.py  0003_property_model.py  0004_make_parcel_id_nullable.py  0005_unique_address_and_parcel_constraint.py  0006_add_document_review.py
applications/tests/: test_admin_workflow.py  test_e2e_accordion.py  test_status_notifications.py
applications/views/: __init__.py  accordion.py  admin_api.py  dispatcher.py  documents.py  htmx.py  review_queue.py  shared.py  submission.py
config/: sbadmin_config.py  settings.py  urls.py  utils.py
crispy_gclba/: __init__.py
docs/design/: 001-infrastructure-component-library.md  002-buyer-form-ux-upgrades.md  003-staff-admin-ux-upgrades.md  gclba-apply-v2.jsx
docs/plans/: 2026-02-20-beauty-mobile-polish-design.md  2026-02-28-tailwind-build-cotton-components.md  2026-03-03-smartbase-retrofit-plan.md  (+1 more)
requirements/: base.txt  development.txt  production.txt
templates/: base.html
(+150 files in other folders)
